upgrade footer and colors

--- a/projects/bmc/src/assets/i18n/en.json
+++ b/projects/bmc/src/assets/i18n/en.json
@@ -29,7 +29,7 @@
   "bmc.features.themes.title": "Themes",
   "bmc.features.title": "Features",
   "bmc.features.typescript": "Superior developer experience, code completion, refactoring and less bugs",
-  "bmc.footer.changelog": "Show changelog",
+  "bmc.footer.changelog": "Current version",
   "bmc.header.github": "Project Github Repository",
   "bmc.menu.about": "About",
   "bmc.menu.examples": "Examples",
